Add '24w37a' sources