@@ -3,7 +3,6 @@ package net.minecraft.world.entity.animal;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.function.IntFunction;
-import java.util.function.Predicate;
 import javax.annotation.Nullable;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.particles.ItemParticleOption;
@@ -65,10 +64,6 @@ import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.gameevent.GameEvent;
 import net.minecraft.world.level.storage.loot.BuiltInLootTables;
-import net.minecraft.world.level.storage.loot.LootParams;
-import net.minecraft.world.level.storage.loot.LootTable;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.phys.Vec3;
 
 public class Panda extends Animal {
@@ -101,10 +96,6 @@ public class Panda extends Animal {
    private float rollAmount;
    private float rollAmountO;
    Panda.PandaLookAtPlayerGoal lookAtPlayerGoal;
-   static final Predicate<ItemEntity> PANDA_ITEMS = var0 -> {
-      ItemStack var1 = var0.getItem();
-      return (var1.is(Blocks.BAMBOO.asItem()) || var1.is(Blocks.CAKE.asItem())) && var0.isAlive() && !var0.hasPickUpDelay();
-   };
 
    public Panda(EntityType<? extends Panda> var1, Level var2) {
       super(var1, var2);
@@ -406,7 +397,7 @@ public class Panda extends Animal {
       if (this.isEating()) {
          this.addEatingParticles();
          if (!this.level().isClientSide && this.getEatCounter() > 80 && this.random.nextInt(20) == 1) {
-            if (this.getEatCounter() > 100 && this.isFoodOrCake(this.getItemBySlot(EquipmentSlot.MAINHAND))) {
+            if (this.getEatCounter() > 100 && this.getItemBySlot(EquipmentSlot.MAINHAND).is(ItemTags.PANDA_EATS_FROM_GROUND)) {
                if (!this.level().isClientSide) {
                   this.setItemSlot(EquipmentSlot.MAINHAND, ItemStack.EMPTY);
                   this.gameEvent(GameEvent.EAT);
@@ -524,22 +515,13 @@ public class Panda extends Animal {
       }
 
       if (!var2.isClientSide() && var2.getGameRules().getBoolean(GameRules.RULE_DOMOBLOOT)) {
-         ServerLevel var10 = (ServerLevel)var2;
-         LootTable var11 = var10.getServer().reloadableRegistries().getLootTable(BuiltInLootTables.PANDA_SNEEZE);
-         LootParams var6 = new LootParams.Builder(var10)
-            .withParameter(LootContextParams.ORIGIN, this.position())
-            .withParameter(LootContextParams.THIS_ENTITY, this)
-            .create(LootContextParamSets.GIFT);
-
-         for (ItemStack var9 : var11.getRandomItems(var6)) {
-            this.spawnAtLocation(var9);
-         }
+         this.dropFromGiftLootTable(BuiltInLootTables.PANDA_SNEEZE, this::spawnAtLocation);
       }
    }
 
    @Override
    protected void pickUpItem(ItemEntity var1) {
-      if (this.getItemBySlot(EquipmentSlot.MAINHAND).isEmpty() && PANDA_ITEMS.test(var1)) {
+      if (this.getItemBySlot(EquipmentSlot.MAINHAND).isEmpty() && canPickUpAndEat(var1)) {
          this.onItemPickup(var1);
          ItemStack var2 = var1.getItem();
          this.setItemSlot(EquipmentSlot.MAINHAND, var2);
@@ -681,10 +663,6 @@ public class Panda extends Animal {
       return var1.is(ItemTags.PANDA_FOOD);
    }
 
-   private boolean isFoodOrCake(ItemStack var1) {
-      return this.isFood(var1) || var1.is(Blocks.CAKE.asItem());
-   }
-
    @Nullable
    @Override
    protected SoundEvent getDeathSound() {
@@ -704,6 +682,10 @@ public class Panda extends Animal {
    @Override
    public EntityDimensions getDefaultDimensions(Pose var1) {
       return this.isBaby() ? BABY_DIMENSIONS : super.getDefaultDimensions(var1);
+   }
+
+   private static boolean canPickUpAndEat(ItemEntity var0) {
+      return var0.getItem().is(ItemTags.PANDA_EATS_FROM_GROUND) && var0.isAlive() && !var0.hasPickUpDelay();
    }
 
    public static enum Gene implements StringRepresentable {
@@ -1065,15 +1047,16 @@ public class Panda extends Animal {
 
       @Override
       public boolean canUse() {
-         if (this.cooldown <= Panda.this.tickCount
-            && !Panda.this.isBaby()
-            && !Panda.this.isInWater()
-            && Panda.this.canPerformAction()
-            && Panda.this.getUnhappyCounter() <= 0) {
-            List var1 = Panda.this.level().getEntitiesOfClass(ItemEntity.class, Panda.this.getBoundingBox().inflate(6.0, 6.0, 6.0), Panda.PANDA_ITEMS);
-            return !var1.isEmpty() || !Panda.this.getItemBySlot(EquipmentSlot.MAINHAND).isEmpty();
-         } else {
+         if (this.cooldown > Panda.this.tickCount
+            || Panda.this.isBaby()
+            || Panda.this.isInWater()
+            || !Panda.this.canPerformAction()
+            || Panda.this.getUnhappyCounter() > 0) {
             return false;
+         } else {
+            return !Panda.this.getItemBySlot(EquipmentSlot.MAINHAND).isEmpty()
+               ? true
+               : !Panda.this.level().getEntitiesOfClass(ItemEntity.class, Panda.this.getBoundingBox().inflate(6.0, 6.0, 6.0), Panda::canPickUpAndEat).isEmpty();
          }
       }
 
@@ -1093,10 +1076,12 @@ public class Panda extends Animal {
 
       @Override
       public void start() {
-         List var1 = Panda.this.level().getEntitiesOfClass(ItemEntity.class, Panda.this.getBoundingBox().inflate(8.0, 8.0, 8.0), Panda.PANDA_ITEMS);
-         if (!var1.isEmpty() && Panda.this.getItemBySlot(EquipmentSlot.MAINHAND).isEmpty()) {
-            Panda.this.getNavigation().moveTo((Entity)var1.get(0), 1.2000000476837158);
-         } else if (!Panda.this.getItemBySlot(EquipmentSlot.MAINHAND).isEmpty()) {
+         if (Panda.this.getItemBySlot(EquipmentSlot.MAINHAND).isEmpty()) {
+            List var1 = Panda.this.level().getEntitiesOfClass(ItemEntity.class, Panda.this.getBoundingBox().inflate(8.0, 8.0, 8.0), Panda::canPickUpAndEat);
+            if (!var1.isEmpty()) {
+               Panda.this.getNavigation().moveTo((Entity)var1.getFirst(), 1.2000000476837158);
+            }
+         } else {
             Panda.this.tryToSit();
          }
 
